--- a/ProjetoPET/Views/Home/Index.cshtml
+++ b/ProjetoPET/Views/Home/Index.cshtml
@@ -43,7 +43,7 @@
                     <div class="col-lg-5 mr-auto text-lg-right align-self-center order-lg-1" data-aos="fade-right">
                         <h2 class="text-black">Animais felizes</h2>
                         <p class="mb-4">Far far away, behind the word mountains, Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-                        <p><a href="#" class="btn btn-primary">Read More</a></p>
+                        <p><a href="#" class="btn btn-primary">Leia Mais</a></p>
                     </div>
                 </div>
             </div>
@@ -95,46 +95,49 @@
         </div>
         <div class="row accordion justify-content-center block__76208">
             <div class="col-lg-6 order-lg-1 mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="">
-                <img src="images/dog_5.jpg" alt="Image" class="img-fluid rounded">
+                @*<img src="images/dog_5.jpg" alt="Image" class="img-fluid rounded">*@
+                <img src="~/images/equipe4.jpg" alt="Image" class="img-fluid rounded"/>
             </div>
             <div class="col-lg-5 ml-auto order-lg-2 align-self-center" data-aos="fade-up" data-aos-delay="100">
                 <div class="accordion-item">
                     <h3 class="mb-0 heading">
-                        <a class="btn-block" data-toggle="collapse" href="#collapseFive" role="button" aria-expanded="true" aria-controls="collapseFive">Lorem ipsum dolor sit amet<span class="icon"></span></a>
+                        <a class="btn-block" data-toggle="collapse" href="#collapseFive" role="button" aria-expanded="true" aria-controls="collapseFive">Como funciona a adoção pelo ProjetoPET?<span class="icon"></span></a>
                     </h3>
                     <div id="collapseFive" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
                         <div class="body-text">
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum ipsum autem minima repellat, corrupti consequuntur sit amet atque, optio provident harum eius numquam dolores quam dolore quas! Quisquam, velit accusantium?</p>
+                            <p>
+                                Para formalizar a adoção é necessário apresentar a cédula de identidade, CPF e o comprovante de residência. Com isso, a entidade controla os processos de adoção e, como muitas delas implantam microchips nos animais,
+                                fica mais fácil localizar o adotante caso o animal seja encontrado nas ruas novamente.
+                            </p>
                         </div>
                     </div>
                 </div> <!-- .accordion-item -->
                 <div class="accordion-item">
                     <h3 class="mb-0 heading">
-                        <a class="btn-block" data-toggle="collapse" href="#collapseSix" role="button" aria-expanded="false" aria-controls="collapseSix">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, voluptas. <span class="icon"></span></a>
+                        <a class="btn-block" data-toggle="collapse" href="#collapseSix" role="button" aria-expanded="false" aria-controls="collapseSix">Posso adotar mais de um amigo pelo Projeto?<span class="icon"></span></a>
                     </h3>
                     <div id="collapseSix" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                         <div class="body-text">
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui doloremque magnam ea, fuga deserunt dolor, atque ex libero aspernatur nobis nisi soluta nulla vitae natus omnis! Inventore beatae amet autem?</p>
+                            <p>
+                                A compra de animais permite que você escolha de acordo com a cor, raça ou fofura, assim, frequentemente os filhotes de raça são os mais comprados. No entanto, a adoção tem muito mais a ver com acolher um ser que hoje se
+                                encontra com medo e abandonado. E mostrar o quanto o mundo pode ser carinhoso e bom. Cuidando, sendo responsável e oferecendo amor.
+                            </p>
                         </div>
                     </div>
                 </div> <!-- .accordion-item -->
                 <div class="accordion-item">
                     <h3 class="mb-0 heading">
-                        <a class="btn-block" data-toggle="collapse" href="#collapseSeven" role="button" aria-expanded="false" aria-controls="collapseSeven">Lorem ipsum dolor sit, amet consectetur adipisicing elit. <span class="icon"></span></a>
+                        <a class="btn-block" data-toggle="collapse" href="#collapseSeven" role="button" aria-expanded="false" aria-controls="collapseSeven">Passo a passo para a adoção<span class="icon"></span></a>
                     </h3>
                     <div id="collapseSeven" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                         <div class="body-text">
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, aspernatur exercitationem consequatur soluta vero error autem nemo cum! Consequatur illo voluptatum eos labore corrupti animi odio accusamus perferendis? Eveniet, odit.</p>
-                        </div>
-                    </div>
-                </div> <!-- .accordion-item -->
-                <div class="accordion-item">
-                    <h3 class="mb-0 heading">
-                        <a class="btn-block" data-toggle="collapse" href="#collapseEight" role="button" aria-expanded="false" aria-controls="collapseEight">consectetur, adipisicing elit?<span class="icon"></span></a>
-                    </h3>
-                    <div id="collapseEight" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-                        <div class="body-text">
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore dolorem aliquam commodi magni. Animi harum voluptates odio asperiores, atque tenetur eveniet itaque pariatur ut. Est quas ducimus architecto?</p>
+                            <p>
+                                Tenha certeza de que você realmente quer um animal e vai poder cuidar de todas as suas necessidades<br />
+                                ** Converse com sua família e com todos que moram em sua casa<br />
+                                ** Procure uma ONG de adoção ou o centro de controle de zoonoses. Muitas realizam feiras de adoção em locais como estacionamentos de supermercados e shoppings<br />
+                                ** Considere o perfil do animal que pode se adaptar melhor a sua rotina (tamanho, idade e outras características)<br />
+                                ** Leve RG, CPF e comprovante de residência
+                            </p>
                         </div>
                     </div>
                 </div> <!-- .accordion-item -->
@@ -238,7 +241,7 @@
                             Telefone: 9999-99
                             Descricao: Dócil e ansioso por um novo lar.
                         </p>
-                        <p><a href="#" class="">Read More..</a></p>
+                        <p><a href="#" class="">Leia Mais..</a></p>
                     </div>
                 </div>
             </div>
@@ -258,7 +261,7 @@
                             Telefone: 9999-99
                             Descricao: Dócil e ansiosa por um novo lar.
                         </p>
-                        <p><a href="#" class="">Read More..</a></p>
+                        <p><a href="#" class="">Leia Mais..</a></p>
                     </div>
                 </div>
             </div>
