--- a/ProjetoPET/Views/Shared/_LayoutTour.cshtml
+++ b/ProjetoPET/Views/Shared/_LayoutTour.cshtml
@@ -92,64 +92,63 @@
             </div>
         </div>*@
 
-        <footer class="site-footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-9">
-                        <div class="row">
-                            <div class="col-md-5">
-                                <h2 class="footer-heading mb-4">Sobre nós</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque facere laudantium magnam voluptatum autem. Amet aliquid nesciunt veritatis aliquam.</p>
-                            </div>
-                            <div class="col-md-3 ml-auto">
-                                <h2 class="footer-heading mb-4">Quick Links</h2>
-                                <ul class="list-unstyled">
-                                    <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                                    <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="About">Sobre nossa organização</a></li>
-                                    <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Contact">Entre em contato</a></li>
-                                    <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Pet" asp-action="Index">Cadastre seu PeT</a></li>
-                                    <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Evento" asp-action="Index">Eventos</a></li>
-                                    <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Adocao" asp-action="Index">Adoção</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-md-3">
-                                <h2 class="footer-heading mb-4">Siga-nos</h2>
-                                <a href="#" class="pl-0 pr-3 social-link"><span class="icon-facebook"></span></a>
-                                <a href="#" class="pl-3 pr-3 social-link"><span class="icon-twitter"></span></a>
-                                <a href="#" class="pl-3 pr-3 social-link"><span class="icon-instagram"></span></a>
-                                <a href="#" class="pl-3 pr-3 social-link"><span class="icon-linkedin"></span></a>
-                            </div>
+    <footer class="site-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-9">
+                    <div class="row">
+                        <div class="col-md-5">
+                            <h2 class="footer-heading mb-4">Sobre nós</h2>
+                            <p>Somos um projeto sem fins lucrativos com o intuito de auxiliar pets e seus donos** </p>
                         </div>
-                    </div>
-                    <div class="col-md-3">
-                        <h2 class="footer-heading mb-4">Receber Notícias</h2>
-                        <form action="#" method="post" class="footer-subscribe">
-                            <div class="input-group mb-3">
-                                <input type="text" class="form-control border-secondary text-white bg-transparent" placeholder="Digite seu email" aria-label="Enter Email" aria-describedby="button-addon2">
-                                <div class="input-group-append">
-                                    <button class="btn btn-primary text-black" type="button" id="button-addon2">Enviar</button>
-                                </div>
-                            </div>
-                        </form>
+                        <div class="col-md-3 ml-auto">
+                            <h2 class="footer-heading mb-4">Quick Links</h2>
+                            <ul class="list-unstyled">
+                                <li><a href="#about-section" class="smoothscroll">Sobre Nós</a></li>
+                                <li><a href="#trainers-section" class="smoothscroll">Veterinários</a></li>
+                                <li><a href="#services-section" class="smoothscroll">Serviços</a></li>
+                                <li><a href="#testimonials-section" class="smoothscroll">Testimoniais</a></li>
+                                <li><a href="#contact-section" class="smoothscroll">Contato</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-md-3">
+                            <h2 class="footer-heading mb-4">Siga-nos</h2>
+                            <a href="#" class="pl-0 pr-3 social-link"><span class="icon-facebook"></span></a>
+                            <a href="#" class="pl-3 pr-3 social-link"><span class="icon-twitter"></span></a>
+                            <a href="#" class="pl-3 pr-3 social-link"><span class="icon-instagram"></span></a>
+                            <a href="#" class="pl-3 pr-3 social-link"><span class="icon-linkedin"></span></a>
+                        </div>
                     </div>
                 </div>
-                <div class="row pt-5 mt-5 ">
-                    <div class="col-md-12">
-                        <div class="border-top pt-5">
-                            <p>
-                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                Copyright &copy;
-                                <script>document.write(new Date().getFullYear());</script> All rights reserved | Projeto feito com
-                                <i class="icon-heart-o" aria-hidden="true"></i> by <a>Fábrica de Software</a>
-                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            </p>
-
+                <div class="col-md-3">
+                    <h2 class="footer-heading mb-4">Receber Notícias</h2>
+                    <form action="#" method="post" class="footer-subscribe">
+                        <div class="input-group mb-3">
+                            <input type="text" class="form-control border-secondary text-white bg-transparent" placeholder="Digite seu email" aria-label="Enter Email" aria-describedby="button-addon2">
+                            <div class="input-group-append">
+                                <button class="btn btn-primary text-black" type="button" id="button-addon2">Enviar</button>
+                            </div>
                         </div>
-                    </div>
-
+                    </form>
                 </div>
             </div>
-        </footer>
+            <div class="row pt-5 mt-5 ">
+                <div class="col-md-12">
+                    <div class="border-top pt-5">
+                        <p>
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            Copyright &copy;
+                            <script>document.write(new Date().getFullYear());</script> Todos os direitos reservados | Projeto feito com
+                            <i class="icon-heart-o" aria-hidden="true"></i> by <a>Fábrica de Software</a>
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                        </p>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </footer>
     </div> <!-- .site-wrap -->
 
 
