--- a/ProjetoPET/Views/Home/Index.cshtml
+++ b/ProjetoPET/Views/Home/Index.cshtml
@@ -25,13 +25,13 @@
 </section>
 <section class="site-section" id="about-section">
     <div class="container">
-        <div class="row justify-content-center" data-aos="fade-up">
+        @*<div class="row justify-content-center" data-aos="fade-up">
             <div class="col-lg-6 text-center heading-section mb-5">
 
                 <h2 class="text-black mb-2">Bem-Vindo ao nosso ponto de encontro</h2>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                <p>Apartir daqui i.</p>
             </div>
-        </div>
+        </div>*@
         <div class="row hover-1-wrap mb-5 mb-lg-0">
             <div class="col-12">
                 <div class="row">
@@ -42,8 +42,8 @@
                     </div>
                     <div class="col-lg-5 mr-auto text-lg-right align-self-center order-lg-1" data-aos="fade-right">
                         <h2 class="text-black">Animais felizes</h2>
-                        <p class="mb-4">Far far away, behind the word mountains, Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-                        <p><a href="#" class="btn btn-primary">Read More</a></p>
+                        <p class="mb-4"><p>Nós buscamos animais de ruas que sofrem maltratos, tratamos deles damos o maior cuidado para ele sinta-se bem acolhido e ficando felizes para encontrar seu próximo dono.</p>
+                        <p><a href="#" class="btn btn-primary">Leia mais</a></p>
                     </div>
                 </div>
             </div>
@@ -54,9 +54,9 @@
                     <div class="mb-4 mb-lg-0 col-lg-6" data-aos="fade-right">
                         <a href="#" class="rotate-reverse10">
                             @*<img src="images/dog_4.jpg" alt="Image" class="img-fluid">*@
-                            <img src="~/images/equipe2.jpg" class="img-fluid"/>
-                        </a>
-                    </div>
+        <img src="~/images/equipe2.jpg" class="img-fluid" />
+        </a>
+    </div>
                     <div class="col-lg-5 ml-auto align-self-center" data-aos="fade-left">
                         <h2 class="text-black">Equipe</h2>
                         <p class="mb-4">Construído por alunos da Fábrica de Software.</p>
@@ -77,8 +77,7 @@
             </div>
             <div class="col-md-5 ml-auto align-self-center" data-aos="fade-left">
                 <h2 class="mb-2 heading mb-4">Encontre o seu <strong>Veterinário</strong> ideal</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste amet praesentium tenetur quos eius asperiores incidunt <a href="#">reprehenderit</a> hic labore? Officiis enim laborum facere iure voluptatem autem veritatis cupiditate magnam saepe.</p>
-                <p>Nulla, beatae ducimus? Dolor distinctio tempore hic consequatur, magni consectetur possimus tenetur eius, placeat, eveniet facilis perferendis vitae deleniti incidunt! Incidunt, illum eum? Suscipit aliquid consequatur repudiandae doloremque est nisi.</p>
+                <p>Sempre buscamos encontrar e divulgar os melhores veterinário para que vocês possam contratar para dar o melhor auxilo para seus pets.</p>
 
             </div>
         </div>
@@ -90,7 +89,7 @@
             <div class="col-lg-6 text-center heading-section mb-5">
 
                 <h2 class="text-black mb-2">Perguntas mais frequentes</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit facere quia quas quod at, reprehenderit eaque nam.</p>
+                <p>Abaixo mostramos as perguntas mais frequentes para que possam esclarecer todas as suas dúvidas possíveis.</p>
             </div>
         </div>
         <div class="row accordion justify-content-center block__76208">
@@ -100,41 +99,31 @@
             <div class="col-lg-5 ml-auto order-lg-2 align-self-center" data-aos="fade-up" data-aos-delay="100">
                 <div class="accordion-item">
                     <h3 class="mb-0 heading">
-                        <a class="btn-block" data-toggle="collapse" href="#collapseFive" role="button" aria-expanded="true" aria-controls="collapseFive">Lorem ipsum dolor sit amet<span class="icon"></span></a>
+                        <a class="btn-block" data-toggle="collapse" href="#collapseFive" role="button" aria-expanded="true" aria-controls="collapseFive">Qual o melhor? <span class="icon"></span></a>
                     </h3>
                     <div id="collapseFive" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
                         <div class="body-text">
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum ipsum autem minima repellat, corrupti consequuntur sit amet atque, optio provident harum eius numquam dolores quam dolore quas! Quisquam, velit accusantium?</p>
+                            <p>É possível encontrar todo tipo de animal para adoção, não apenas cães e gatos. No entanto, o presidente da ONG ARCA Brasil, Marco Ciampi, encoraja a adoção só desses dois tipos. “Outros animais têm demandas próprias e necessitam de atenção especial. Nunca adote animais silvestres”. Quanto à raça dos bichos, não existe uma melhor que outra. É mais comum encontrar vira-latas procurando lares.</p>
                         </div>
                     </div>
                 </div> <!-- .accordion-item -->
                 <div class="accordion-item">
                     <h3 class="mb-0 heading">
-                        <a class="btn-block" data-toggle="collapse" href="#collapseSix" role="button" aria-expanded="false" aria-controls="collapseSix">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, voluptas. <span class="icon"></span></a>
+                        <a class="btn-block" data-toggle="collapse" href="#collapseSix" role="button" aria-expanded="false" aria-controls="collapseSix">O que devo fazer antes de adotar? <span class="icon"></span></a>
                     </h3>
                     <div id="collapseSix" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                         <div class="body-text">
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui doloremque magnam ea, fuga deserunt dolor, atque ex libero aspernatur nobis nisi soluta nulla vitae natus omnis! Inventore beatae amet autem?</p>
+                            <p>Lembre-se de que todo animal de estimação vive cerca de 12 anos. Converse com sua família: todos devem se comprometer a cuidar dele por esse período. A família tem recursos para mantê-lo? Ele deve ser alimentado adequadamente (com ra- ção, e não restos de comida) e ir ao veterinário pelo menos uma vez ao ano. O pet precisa se exercitar, passear e se divertir, além de receber carinho. Apesar disso não custar nada, é importante ter tempo para atender às necessidades dele. Só adote um animal se tiver certeza que poderá cuidar dele da maneira adequada.</p>
                         </div>
                     </div>
                 </div> <!-- .accordion-item -->
                 <div class="accordion-item">
                     <h3 class="mb-0 heading">
-                        <a class="btn-block" data-toggle="collapse" href="#collapseSeven" role="button" aria-expanded="false" aria-controls="collapseSeven">Lorem ipsum dolor sit, amet consectetur adipisicing elit. <span class="icon"></span></a>
+                        <a class="btn-block" data-toggle="collapse" href="#collapseSeven" role="button" aria-expanded="false" aria-controls="collapseSeven">Animais adultos ou filhotes? <span class="icon"></span></a>
                     </h3>
                     <div id="collapseSeven" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                         <div class="body-text">
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, aspernatur exercitationem consequatur soluta vero error autem nemo cum! Consequatur illo voluptatum eos labore corrupti animi odio accusamus perferendis? Eveniet, odit.</p>
-                        </div>
-                    </div>
-                </div> <!-- .accordion-item -->
-                <div class="accordion-item">
-                    <h3 class="mb-0 heading">
-                        <a class="btn-block" data-toggle="collapse" href="#collapseEight" role="button" aria-expanded="false" aria-controls="collapseEight">consectetur, adipisicing elit?<span class="icon"></span></a>
-                    </h3>
-                    <div id="collapseEight" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-                        <div class="body-text">
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore dolorem aliquam commodi magni. Animi harum voluptates odio asperiores, atque tenetur eveniet itaque pariatur ut. Est quas ducimus architecto?</p>
+                            <p>Embora a adoção de animais crescidos costume ser menos desejada, é mais econômica e tranquila. Além de dispensar gastos que se teria com filhotes, os pets são mais calmos e costumam dar menos trabalho com latidos e “rebeldias”. Alguns desses animais têm uma história de muito sofrimento e podem ter sido traumatizados por antigos donos, demonstrando medo de pessoas ao serem adotados. É importante compreender o motivo desse comportamento e se esforçar para que ele confie em quem o adotou. “É preciso sensibilidade e conhecimento sobre o comportamento animal para curar feridas da alma. Em casos mais graves, será necessário o auxílio de um adestrador para reabilitá- lo completamente”, orienta o presidente da ARCA.</p>
                         </div>
                     </div>
                 </div> <!-- .accordion-item -->
